Replace use of Collections.unmodifiable*() methods where appropriate
Closes gh-29321